# convexLayers

./: .gitignore  CMakeLists.txt  README.md
include/: convexHulls.hpp  minkowski.hpp  parserArguments.hpp
points/: contrex.txt  farey.txt  heptagon.txt  octogon.txt  polygon.txt
src/: convexHulls.cpp  convexLayers.cpp  main.cpp  minkowski.cpp  old.cpp  parserArguments.cpp  polynomial.cpp  program.cpp  regularPolygons.cpp  stats.cpp
